--- a/home.html
+++ b/home.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Cat Pong</h1>
+    <!-- Game Menu -->
+    <div id="gameMenu"></div>
+        <h2>Game Menu</h2>
+        <button onclick="showOptions()">Options</button>
+        <button onclick="redirectToGamePage()">Start game</button> 
+    <!-- i want to redirect my users from one page to another and in this case the main menu to the actual game -->
+    <div id="optionsPopup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closeOptionsPopup()">&times;</span>
+            <h2>Options</h2>
+            <label for="totalLives">Number of lives</label>
+            <input type="number" id="totalLives" min="1" max="9" value="3">
+            <button onclick="applyOptions()">Apply</button>
+        </div>
+    </div>
 
+
+
+    <script src="./index.js"></script>
+</body>
+</html>
