Made the title cascade and helped the x button look cleaner in the popup menu

--- a/home.html
+++ b/home.html
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Cat Pong</h1>
     <!-- Game Menu -->
     <div id="gameMenu">
+        <h1>
+            <span>C</span>
+            <span>a</span>
+            <span>t</span>
+            <span></span>
+            <span>P</span>
+            <span>o</span>
+            <span>n</span>
+            <span>g</span>
+        </h1>
         <h2>Game Menu</h2>
         <button onclick="showOptions()">Options</button>
         <button onclick="redirectToGamePage()">Start game</button> 
@@ -24,6 +33,7 @@
             <button onclick="applyOptions()">Apply</button>
         </div>
     </div>
+    <h2>Get ready for a meow-gical experience! Step into our cozy corner of the world!</h2>
     </div>
 
 
