I improved the title to make it have a pinpong effect and then goes into the cascade as the default

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <!-- Game Menu -->
     <div id="gameMenu">
         <h1>
-            <span>C</span>
+            <span id="firstLetter">C</span>
             <span>a</span>
             <span>t</span>
             <span></span>
