I fixed the music issue for now and added styles to the homepage. I also added my game lay out i need to still work on it and change my asset imgs to a png to make it so that theres no white bg

--- a/home.html
+++ b/home.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
     <link rel="stylesheet" href="style.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Titan+One&display=swap");
+    </style>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Saira+Semi+Condensed:wght@100&family=Titan+One&display=swap");
+    </style>
   </head>
   <body>
     <!-- Game Menu -->
@@ -42,11 +48,24 @@
               value="1"
             />
           </div>
-              <!-- Background music by <a href="https://pixabay.com/users/viyn-18464741/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=13253">maulana akbarudin</a> from <a href="https://pixabay.com/music//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=13253">Pixabay</a> -->
-    <audio id="backgroundMusic" autoplay loop>
-        <source src="./assets/viyn-cotton-candy-loop-version-13253.mp3" type="audio/mp3">
-        Your browser does not support the audio tag.
-    </audio>
+          <!-- Background music by <a href="https://pixabay.com/users/viyn-18464741/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=13253">maulana akbarudin</a> from <a href="https://pixabay.com/music//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=13253">Pixabay</a> -->
+          <audio id="backgroundMusic" loop>
+            <source
+              src="./assets/viyn-cotton-candy-loop-version-13253.mp3"
+              type="audio/mp3"
+            />
+            Your browser does not support the audio tag.
+          </audio>
+          <h2>Instructions</h2>
+          <h3>Controls</h3>
+          <p>Use WASD for left paw</p>
+          <p>Use Arrow Keys for the right paw</p>
+          <h3>Objective</h3>
+          <p>
+            Claw your way to victory with feline finesse outlast, outplay,
+            outcat!"
+          </p>
+          <p>Miss the ball and its GAMEOVER</p>
         </div>
       </div>
       <h2>
