--- a/game.html
+++ b/game.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cat Pong</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="game.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <button onclick="redirectToHomePage()">Back to Home</button>
+    <div class="scoreboard-container">
+      <div class="scoreboard">
+        <div class="player-1">
+          <h2>PLAYER 1:</h2>
+        </div>
+        <div class="player-2">
+          <h2>PLAYER 2:</h2>
+        </div>
+      </div>
+    </div>
+    <div class="game-container">
+      <div class="cat-paddle" id="leftPaddle">
+        <img src="./assets/left paw paddle.jpg" alt="Left Cat Paw" />
+      </div>
+      <div class="ball" id="ball">
+        <img src="./assets/ball.jpg" alt="Tennis Ball" />
+      </div>
+      <div class="cat-paddle" id="rightPaddle">
+        <img src="./assets/right paw paddle.jpg" alt="Right Cat Paw" />
+      </div>
+    </div>
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
