Starting to work on the functionality of the game

--- a/game.html
+++ b/game.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cat Pong</title>
-    <link rel="stylesheet" href="game.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./home.css"/>
+    <link rel="stylesheet" href="./game.css"/>
   </head>
   <body>
     <button onclick="redirectToHomePage()">Back to Home</button>
@@ -30,6 +30,6 @@
         <img src="./assets/right paw paddle.jpg" alt="Right Cat Paw" />
       </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="./game.js"></script>
   </body>
 </html>
