--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="home.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Titan+One&display=swap");
     </style>
@@ -14,6 +14,9 @@
   </head>
   <body>
     <!-- Game Menu -->
+    <!-- <div id="imageBackground">
+      <img src="./assets/GameMenuCat.png" alt="Background Image">
+    </div> -->
     <div id="gameMenu">
       <h1>
         <span id="firstLetter">C</span>
@@ -59,13 +62,13 @@
           <h2>Instructions</h2>
           <h3>Controls</h3>
           <p>Use WASD for left paw</p>
-          <p>Use Arrow Keys for the right paw</p>
+          <p>Use Arrow Keys for right paw</p>
           <h3>Objective</h3>
           <p>
             Claw your way to victory with feline finesse outlast, outplay,
             outcat!"
           </p>
-          <p>Miss the ball and its GAMEOVER</p>
+          <p>Run out of lives and its GAMEOVER</p>
         </div>
       </div>
       <h2>
@@ -73,7 +76,6 @@
         world!
       </h2>
     </div>
-
-    <script src="./index.js"></script>
+    <script src="./home.js"></script>
   </body>
 </html>
