i added some functionalitly to the paddles so they move up and down! i also added my homepage image. i need to work on game functionality and style more.

--- a/game.html
+++ b/game.html
@@ -6,6 +6,9 @@
     <title>Cat Pong</title>
     <link rel="stylesheet" href="./home.css"/>
     <link rel="stylesheet" href="./game.css"/>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap');
+    </style>
   </head>
   <body>
     <button onclick="redirectToHomePage()">Back to Home</button>
@@ -21,13 +24,13 @@
     </div>
     <div class="game-container">
       <div class="cat-paddle" id="leftPaddle">
-        <img src="./assets/left paw paddle.jpg" alt="Left Cat Paw" />
+        <img src="./assets/left paw paddle.png" alt="Left Cat Paw" />
       </div>
       <div class="ball" id="ball">
         <img src="./assets/ball.jpg" alt="Tennis Ball" />
       </div>
       <div class="cat-paddle" id="rightPaddle">
-        <img src="./assets/right paw paddle.jpg" alt="Right Cat Paw" />
+        <img src="./assets/right paw paddle.png" alt="Right Cat Paw" />
       </div>
     </div>
     <script src="./game.js"></script>
