--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
         </h1>
         <h2 class="gameMenu">Game Menu</h2>
         <button onclick="showOptions()">Options</button>
-        <button onclick="redirectToGamePage()">Start Game</button>
+        <button onclick="redirectToGamePage()">Play Game</button>
         <!-- i want to redirect my users from one page to another and in this case the main menu to the actual game -->
         <div id="optionsPopup" class="popup">
           <div class="popup-content">
