I added better collision functionality

--- a/game.html
+++ b/game.html
@@ -25,7 +25,7 @@
     </div>
     <div class="game-container">
       <div class="cat-paddle" id="leftPaddle">
-        <img src="./assets/right paw paddle.png" alt="Left Cat Paw" />
+        <img src="./assets/left-paw-paddle.png" alt="Left Cat Paw" />
       </div>
       <div class="ball" id="ball">
         <img src="./assets/ball.png" alt="Tennis Ball" />
