--- a/home.html
+++ b/home.html
@@ -19,7 +19,16 @@
     <div id="main-container">
       <!-- Game Menu -->
       <div id="menuImg">
-        <img src="./assets/GameMenuCat.png" alt="Background Image" />
+        <img
+          id="blackCat"
+          src="./assets/SecondGameMenuCat.png"
+          alt="Background Image black cat"
+        />
+        <img
+          id="sunGlasses"
+          src="./assets/GameMenuCat.png"
+          alt="Background Image sunglasses"
+        />
       </div>
       <div id="gameMenu">
         <h1>
@@ -32,7 +41,7 @@
           <span>n</span>
           <span>g</span>
         </h1>
-        <h2 class="gameMenu">Game Menu</h2>
+        <h2 id="popup" class="gameMenu">Game Menu</h2>
         <button onclick="showOptions()">Options</button>
         <button onclick="redirectToGamePage()">Play Game</button>
         <!-- i want to redirect my users from one page to another and in this case the main menu to the actual game -->
@@ -40,7 +49,7 @@
           <div class="popup-content">
             <span class="close" onclick="closeOptionsPopup()">&times;</span>
             <!-- this span tag is used to create the x on my menu which im still debating on creating a nicer one in css -->
-            <h2>Options</h2>
+            <h2 id="popup">Options</h2>
             <label for="totalLives">Number of lives</label>
             <input type="number" id="totalLives" min="1" max="9" value="3" />
             <button onclick="applyOptions()">Apply</button>
@@ -64,7 +73,7 @@
               Your browser does not support the audio tag.
             </audio>
             <div class="instructions-container">
-              <h2 class="instructions">Instructions</h2>
+              <h2 id="popup" class="instructions">Instructions</h2>
               <h3>Controls</h3>
               <p>Use WASD for left paw</p>
               <p>Use Arrow Keys for right paw</p>
@@ -77,7 +86,7 @@
             </div>
           </div>
         </div>
-        <h2>
+        <h2 id="popup">
           Get ready for a meow-gical experience! Step into our cozy corner of
           the world!
         </h2>
