Added player cards to make it easier to tell which player is 1/2. i changed the home page music so that itll start when u press the button

--- a/home.html
+++ b/home.html
@@ -44,6 +44,7 @@
         <h2 id="popup" class="gameMenu">Game Menu</h2>
         <button onclick="showOptions()">Options</button>
         <button onclick="redirectToGamePage()">Play Game</button>
+        <button id="startMusicButton">Start Music</button>
         <!-- i want to redirect my users from one page to another and in this case the main menu to the actual game -->
         <div id="optionsPopup" class="popup">
           <div class="popup-content">
