--- a/game.html
+++ b/game.html
@@ -26,6 +26,10 @@
         </div>
       </div>
     </div>
+    <div class="playerCards">
+      <img class="card1" src="./assets/player1.png" alt="player 1 cat paw icon">
+      <img class="card2" src="./assets/player2.png" alt="player 2 cat paw icon">
+    </div>
     <div class="game-container">
       <div class="cat-paddle" id="leftPaddle">
         <img src="./assets/left-paw-paddle.png" alt="Left Cat Paw" />
