--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="index.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Titan+One&display=swap");
     </style>
@@ -83,7 +83,7 @@
                 Claw your way to victory with feline finesse outlast, outplay,
                 outcat!"
               </p>
-              <p>Run out of lives and its GAMEOVER</p>
+              <p>First to score upto max points wins</p>
             </div>
           </div>
         </div>
@@ -93,6 +93,6 @@
         </h2>
       </div>
     </div>
-    <script src="./home.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
